# slam_auto_driving

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: packages.cmake
config/: config.yaml  mapping.yaml
data/: pcl_gicp_trans.pcd
data/ch3/: gins.txt  state.txt
data/ch7/: corner.pcd  icp_line_trans.pcd  icp_plane_trans.pcd  icp_trans.pcd  ndt_trans.pcd  sim_source.pcd  sim_target.pcd  surf.pcd
scripts/: plot_ch3_state.py
src/: CMakeLists.txt
src/3d_slam/: 3d_icp.cc  3d_icp.hh  CMakeLists.txt  direct_ndt_lo.cc  direct_ndt_lo.h  incremental_ndt_lo.cc  incremental_ndt_lo.hh  ndt.cc  ndt.hh  ndt.md  ndt_inc.cc  ndt_inc.hh
src/3d_slam/loam-like/: feature_extraction.cc  feature_extraction.hh  loam_like_odom.hh
src/3d_slam/test/: test_icp.cc
src/GPS_IMU_ekf/src/: ekf.cc  ekf.hpp
src/ch2/: CMakeLists.txt  motion.cc
src/ch3/: CMakeLists.txt  README.md  eskf.hpp  imu_integration.h  imu_integration.hh  process_gnss.cc  run_eskf_gins.cc  run_imu_integration.cc  static_imu_init.cc  static_imu_init.h  utm_convert.cc  utm_convert.h
src/ch4/: CMakeLists.txt  README.md  g2o_types.cc  g2o_types.h  gins_pre_integ.cc  gins_pre_integ.h  imu_preintegration.cc  imu_preintegration.h  run_gins_pre_integ.cc
src/ch5/: CMakeLists.txt  README.md  bfnn.cc  bfnn.h  gridnn.hpp  kdtree.cc  kdtree.h  linear_fitting.cc  point_cloud_load_vis.cc  test_nn.cc
src/ch6/: CMakeLists.txt  README.md  frame.cc  frame.h  g2o_types.h  icp_2d.cc  icp_2d.h  lidar_2d_utils.cc  lidar_2d_utils.h  likelihood_field.cc  likelihood_field.h  loop_closing.cc  loop_closing.h  mapping_2d.cc  mapping_2d.h  multi_resolution_likelihood_field.cc  multi_resolution_likelihood_field.h  occupancy_map.cc  occupancy_map.h  submap.cc  submap.h  test_2d_icp_likelihood.cc  test_2d_icp_s2s.cc  test_2d_mapping.cc  test_2dlidar_io.cc  test_occupancy_grid.cc
src/ch7/: CMakeLists.txt  README.md  direct_ndt_lo.cc  direct_ndt_lo.h  gen_lidar_cloud.cc  gen_lidar_cloud.h  icp_3d.cc  icp_3d.h  incremental_ndt_lo.cc  incremental_ndt_lo.h  ndt_3d.cc  ndt_3d.h  ndt_inc.cc  ndt_inc.h
src/ch7/loam-like/: feature_extraction.cc  feature_extraction.h  load_like_odom.cc  loam_like_odom.cc  loam_like_odom.h
src/ch7/loosely_coupled_lio/: cloud_convert.cc  cloud_convert.h  loosely_lio.cc  loosely_lio.h  measure_sync.cc  measure_sync.h
src/ch7/test/: run_gen_simu_data.cc  test_feature_extraction.cc  test_icp.cc  test_inc_ndt_lo.cc  test_loam_odom.cc  test_loosely_lio.cc  test_ndt_lo.cc
src/ch8/: CMakeLists.txt
src/ch8/lio-iekf/: iekf.hpp  lio_iekf.cc  lio_iekf.h
src/ch8/lio-preinteg/: lio_preinteg.cc  lio_preinteg.h
src/ch8/test/: test_lio_iekf.cc  test_lio_preinteg.cc
src/ch9/: CMakeLists.txt  frontend.cc  frontend.h  keyframe.cc  keyframe.h  loopclosure.cc  loopclosure.h  optimization.cc  optimization.h  run_frontend.cc  run_loopclosure.cc  run_mapping.cc  run_optimization.cc
src/common/: CMakeLists.txt  dataset_type.h  eigen_sophus.h  g2o_types.cc  g2o_types.h  global_flags.cc  global_flags.h  gnss.h  imu.h  io_utils.cc  io_utils.h  lidar_utils.h  math_utils.h  message_def.h  nav_state.h  odom.h  point_cloud_utils.cc  point_cloud_utils.h  point_types.h  sys_utils.h
src/common/timer/: timer.cc  timer.h
src/eskf/: CMakeLists.txt  eskf.hpp  run_eskf_gins.cc  static_imu_init.cc  static_imu_init.hh
src/icp_test/: CMakeLists.txt  ceres_icp.cc  ceres_icp.h  cloud_data.h  lidarFactor.hpp  ndt.cc  pose_factor.cc  pose_factor.h  test_ceres_icp.cc
src/icp_test/lidarOptimization/: lidarCeres.cpp
src/imu_gnss/: CMakeLists.txt  process_gnss.cc  run_imu_integration.cc  utm_convert.cc  utm_convert.hh
src/pcl_test/: CMakeLists.txt  test_icp_gicp.cc
src/tools/: CMakeLists.txt  pcl_map_viewer.h
src/tools/pointcloud_convert/: packets_parser.cc  packets_parser.h  velodyne_config.h  velodyne_convertor.cc  velodyne_convertor.h
src/tools/ui/: pangolin_window.cc  pangolin_window.h  pangolin_window_impl.cc  pangolin_window_impl.h  ui_car.cc  ui_car.h  ui_cloud.cc  ui_cloud.h  ui_test.cc  ui_trajectory.cc  ui_trajectory.h
